# odbc-api

./: .gitignore  CHANGELOG.md  Cargo.toml  Changelog.md  Contributing.md  Dockerfile  Readme.md  docker-compose-ci.yml  docker-compose.ci.yml  docker-compose.yml  release-plz.toml  rustfmt.toml  setup-mssql-docker.ps1
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-format.yml  build.yml  cargopublish.yml  coverage.yml  dependabot-auto-merge.yml  odbcsv.yml  release.yml  test.yml
derive/: Cargo.toml
derive/src/: expand.rs  lib.rs
derive/tests/: derive.rs
docker/: Dockerfile.dev  mariadb_odbc_template.ini  setup.sql
docker/dev/: Dockerfile
docker/mssql/: Dockerfile  setup.sql
odbc-api/: Cargo.toml  Changelog.md  Readme.md  sqlite-test.db-journal
odbc-api/benches/: benches.rs  slices_iterator.rs
odbc-api/src/: borrow_mut_statement.rs  buffers.rs  catalog.rs  columnar_bulk_inserter.rs  concurrent_block_cursor.rs  connection.rs  conversion.rs  cursor.rs  driver_complete_option.rs  environment.rs  error.rs  execute.rs  fixed_sized.rs  guide.rs  handles.rs  into_input.rs  into_parameter.rs  lib.rs  narrow.rs  nullable.rs  parameter.rs  parameter_collection.rs  parameters.rs  preallocated.rs  preallocated_polling.rs  prebound.rs  prepared.rs  quircks.rs  quirks.rs  result_set_metadata.rs  row_wise_buffer.rs  shared_connection.rs  sleep.rs  sql_char.rs  statement_connection.rs  statement_with_connection.rs  sync_connection.rs
odbc-api/src/buffers/: any_buffer.rs  any_column_buffer.rs  bin_column.rs  column_with_indicator.rs  columnar.rs  description.rs  dyn_column_buffer.rs  fixed_sized.rs  indicator.rs  item.rs  row_vec.rs  text_column.rs  text_row_set.rs
odbc-api/src/catalog/: columns.rs  foreign_keys.rs  primary_keys.rs  tables.rs
odbc-api/src/cursor/: block_cursor.rs  concurrent_block_cursor.rs  polling_cursor.rs
odbc-api/src/handles/: any_handle.rs  as_handle.rs  bind.rs  buffer.rs  column_description.rs  connection.rs  data_type.rs  description.rs  descriptor.rs  diagnostics.rs  environment.rs  error.rs  logging.rs  sql_char.rs  sql_result.rs  statement.rs  statement_connection.rs
odbc-api/src/parameter/: blob.rs  c_string.rs  varbin.rs  varcell.rs  varchar.rs
odbc-api/src/parameter_collection/: tuple.rs
odbc-api/src/parameters/: default_data_type.rs  into_parameters.rs  single_parameter.rs  tuple.rs
odbc-api/tests/: common.rs  connection_pooling.rs  connection_strings.rs  integration.rs  lib.rs  logging.rs  mssql.rs  structured_logging.rs  without_db.rs
odbc-api/tests/integration/: bulk_insert.rs  catalog.rs  column_wise_bulk_fetch.rs  common.rs  connection_strings.rs  derive.rs  main.rs  mdbtools.rs  nwind.mdb
odbc-async/: Cargo.toml
odbc-async/tests/: main.rs
odbcsv/: Cargo.toml  Changelog.md  License  Readme.md
odbcsv/src/: main.rs
odbcsv/tests/: lib.rs  list-drivers-coverage.txt  list-drivers-dev.txt  list-drivers-linux.txt  list-drivers-windows.txt
src/: as_handle.rs  buffer.rs  buffers.rs  column_description.rs  connection.rs  cursor.rs  diagnostics.rs  environment.rs  error.rs  handles.rs  lib.rs  logging.rs  statement.rs
src/buffers/: fixed_sized_c_type.rs  text_column.rs  text_row_set.rs
src/handles/: buffer.rs  column_description.rs  connection.rs  environment.rs  error.rs  logging.rs  statement.rs
tests/: lib.rs
