[package]
name = "odbc-api-derive"
version = "11.0.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/pacman82/odbc-api"
documentation = "https://docs.rs/odbc-api-derive/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Derive macros for odbc-api crate"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["odbc", "database", "sql"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["api-bindings", "database"]

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "../Readme.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"

[dev-dependencies]
odbc-api = { path = "../odbc-api" }
