[package]
name = "odbcsv"
version = "0.5.0"
authors = ["Markus Klein"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pacman82/odbc-api/tree/master/odbcsv"
documentation = "https://docs.rs/odbcsv/"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Query an ODBC data source and print the result as csv."

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["odbc", "csv", "sql"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["command-line-utilities"]

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc-api = { version = "0.57.0", path = "../odbc-api" }
csv = "1.2.2"
anyhow = "1.0.72"
stderrlog = "0.5.4"
log = "0.4.19"
clap = { version = "4.3.12", features = ["derive", "env"] }

[dev-dependencies]
assert_cmd = "2.0.11"
lazy_static = "1.4.0"
tempfile = "3.6.0"

